<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/srl"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.MealListActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/meals_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/_10sdp"
        android:scrollbars="vertical"/>

</android.support.v4.widget.SwipeRefreshLayout>